--- a/testPrj/core/templates/index_en.html
+++ b/testPrj/core/templates/index_en.html
@@ -242,7 +242,7 @@
                             </p>
                         </div>
                         <ul class="social-icons clearfix">
-                            <li><a href="#" class=""><span class="fa fa-compass"></span></a></li>
+                            <li><a href="https://2gis.kg/bishkek/search/%D0%91%D0%B8%D0%B1%D0%BB%D0%B8%D0%BE%D1%82%D0%B5%D0%BA%D0%B8/rubricId/189" class=""><span class="fa fa-compass"></span></a></li>
                         </ul>
                     </div><!-- person -->
                 </div>
